[package]
name = "discord-bot-all-purpose"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.2"
cloud-vision-flows = "0.1.1"
discord-flows = "0.6"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.5"
http_req_wasi = "0.11.1"
log = "0.4.19"
serde_json = "1.0.96"
store-flows = "0.3.1"
tokio_wasi = { version = "1.25.2", features = ["macros", "rt"] }
async-openai-wasi = { version = "0.16.4", features = ["wasmedge-tls"] }

reqwest_wasi = { version = "0.11.16", features = ["wasmedge-tls"] }
secrecy = "0.8.0"
anyhow = "1.0.79"
